# ifco-digital-training-dbt

./: .gitignore  README.md  databricks.yml  dbt_project.yml  get_crate_data.py  profile_template.yml  profiles.yml  profiles.yml.dist  pyproject.toml  requirements-dev.txt  transform_crate_data.py
.databricks/: .databricks.env
docs/: CONFIGURE_IDE.md  INSTALL_DEPENDENCIES_USING_UV.md  INSTALL_POETRY.md  INSTALL_PYTHON.md
macros/: convert_currency.sql
models/: int_transactions.sql  orders_daily.sql  orders_raw.sql  schema.yml  sources.yml  stg_transactions.sql
models/src/: src_site.sql  (+4 more)
notebooks/: sct_visit_preparation.py
resources/: get_crate_data.job.yml  s3_gh_action_deploy_dbt.job.yml  s3_job_to_migrate.job.yml
s3_dab_dbt_template_project/: README.md  databricks.yml  dbt_project.yml  profile_template.yml
seeds/: cycle_patterns.csv  location_groups.csv  locations.csv  locations.yml  seed_non_matching_portal_ids.csv  seed_portal_list.csv  seed_site.csv  seed_status.csv  seed_trasactions.csv  segment_patterns.csv  segment_patterns.yml  sensors.csv  sensors.yml  source_retailer_sales.csv  transaction_patterns.csv  users.csv  visits.csv  visits.yml
snapshots/: users_snapshot.yml
src/: get_crate_data.py  operations.py  s3_example_notebook_1.py  s3_example_notebook_2.py  s3_example_notebook_3.py  s3_example_notebook_4.py  s3_example_notebook_5.py  setup.py  transform_crate_data.py  utils.py
tests/: assert_asset_status_history_ingestion_date_is_default_date.sql  schema.yml
training_dbt/: dbt_project.yml
training_resources/: training_pyspark_to_sql.dbc
(+73 files in other folders)
