[tool.poetry]
name = "ifco-digital-training-dbt"
version = "0.1.0"
description = ""
authors = ["franramb <franramb2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.8.8"
dbt-databricks = "^1.8.7"
databricks = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
