[tool.poetry]
name = "ifco-digital-training-dbt"
version = "0.1.0"
description = ""
authors = [
    "danisoronellas <daniel.soronellas@ifco.com>",
    "franramb francisco.malpica@ifco.com"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.9"
dbt-databricks = "^1.8.7"
databricks = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
